; ModuleID = '/home/carl/AnghaBench/git/extr_diff.c_parse_algorithm_value.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff.c_parse_algorithm_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"myers\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"default\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"minimal\00", align 1
@XDF_NEED_MINIMAL = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [9 x i8] c"patience\00", align 1
@XDF_PATIENCE_DIFF = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [10 x i8] c"histogram\00", align 1
@XDF_HISTOGRAM_DIFF = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @parse_algorithm_value(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = icmp ne i8* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  store i64 -1, i64* %2, align 8
  br label %39

7:                                                ; preds = %1
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @strcasecmp(i8* %8, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %7
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @strcasecmp(i8* %12, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %11, %7
  store i64 0, i64* %2, align 8
  br label %39

16:                                               ; preds = %11
  %17 = load i8*, i8** %3, align 8
  %18 = call i32 @strcasecmp(i8* %17, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %16
  %21 = load i64, i64* @XDF_NEED_MINIMAL, align 8
  store i64 %21, i64* %2, align 8
  br label %39

22:                                               ; preds = %16
  %23 = load i8*, i8** %3, align 8
  %24 = call i32 @strcasecmp(i8* %23, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0))
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %28, label %26

26:                                               ; preds = %22
  %27 = load i64, i64* @XDF_PATIENCE_DIFF, align 8
  store i64 %27, i64* %2, align 8
  br label %39

28:                                               ; preds = %22
  %29 = load i8*, i8** %3, align 8
  %30 = call i32 @strcasecmp(i8* %29, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0))
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %34, label %32

32:                                               ; preds = %28
  %33 = load i64, i64* @XDF_HISTOGRAM_DIFF, align 8
  store i64 %33, i64* %2, align 8
  br label %39

34:                                               ; preds = %28
  br label %35

35:                                               ; preds = %34
  br label %36

36:                                               ; preds = %35
  br label %37

37:                                               ; preds = %36
  br label %38

38:                                               ; preds = %37
  store i64 -1, i64* %2, align 8
  br label %39

39:                                               ; preds = %38, %32, %26, %20, %15, %6
  %40 = load i64, i64* %2, align 8
  ret i64 %40
}

declare dso_local i32 @strcasecmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
